--- a/src/app/venue/venues/venues.component.html
+++ b/src/app/venue/venues/venues.component.html
@@ -1,6 +1,6 @@
 <h2>Venues</h2>
 
-<div >
+<div class="conatiner-fluid">
     <mat-card class="example-card"  *ngFor="let v of venues">
         <mat-card-header>
       
