--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
   
     <mat-toolbar color="primary">
-        <img src="../../assets/images/mlcnlogo_n.png" class="logo clickable" alt="" height="50px" [routerLink]="['/']">
+        <img src="assets/images/mlcnlogo_n.png" class="logo clickable" alt="" height="50px" [routerLink]="['/']">
      
       <span class="example-spacer"></span>
       <div class="desktop">
